# BitReversi

./: README.md  ai.js  bitboard.mjs  board.js  confirmWindow.js  data2png.js  display.js  eval.js  eval.mjs  game.js  history.mjs  index.html  initializer.js  main.js  main.mjs  my-model-1.json  reversi.html  temp.js  temp1.js
bitreversi-wasm/pkg/: bitreversi_wasm_bg.wasm  package.json
bitriversi-wasm/: Cargo.toml
bitriversi-wasm/pkg/: bitreversi_wasm.d.ts  bitreversi_wasm.js  bitreversi_wasm_bg.wasm.d.ts
