[package]
name = "bitreversi-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rand = "0.7"
console_error_panic_hook = { version = "0.1.7", optional = true }
chrono = "0.4"
once_cell = "1.15.0"
base64 = "0.13.0"

[features]
default = ["console_error_panic_hook"]
test = []

[dependencies.web-sys]
web-sys = "0.3.60"
features = [
	'console'
]

[profile.release]
opt-level = 3

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O4']
